css/custom.css
a {
    color: #000000;
    text-decoration: none;
    background-color: transparent;
  }
  
.card a:hover {
color: #000000;
text-decoration: none;
background-color: transparent;
}

.card img {
    max-height: 200px;
}


.card-columns .card {
    margin-bottom: 0.75rem;
  }

  
  @media screen and (min-width: 576px) {
    .card-columns {
      -webkit-column-count: 1;
      -moz-column-count: 1;
      column-count: 1;
      -webkit-column-gap: 1.25rem;
      -moz-column-gap: 1.25rem;
      column-gap: 1.25rem;
      orphans: 1;
      widows: 1;
    }
    .card-columns .card {
      display: inline-flex;
      width: 100%;
    }
  }
  @media screen and (min-width: 768px) {
    .card-columns {
      -webkit-column-count: 2;
      -moz-column-count: 2;
      column-count: 2;
      -webkit-column-gap: 1.25rem;
      -moz-column-gap: 1.25rem;
      column-gap: 1.25rem;
      orphans: 1;
      widows: 1;
    }
    .card-columns .card {
      display: inline-flex;
      width: 100%;
    }
  }
  @media screen and (min-width: 1200px) {
    .card-columns {
      -webkit-column-count: 3;
      -moz-column-count: 3;
      column-count: 3;
      -webkit-column-gap: 1.25rem;
      -moz-column-gap: 1.25rem;
      column-gap: 1.25rem;
      orphans: 1;
      widows: 1;
    }
    .card-columns .card {
      display: inline-flex;
      width: 100%;
    }
  }

  .card-body {
    -ms-flex: 1 1 auto;
    flex: 1 1 auto;
    min-height: 1px;
    padding: 1.25rem;
  }


  .distanceColor {
    color: #DD2C00 !important;
  }

  .bg-OxFord {
    background-color: #03A9F4 !important;
  }
  
  .bg-Mensa {
    background-color: #4CAF50 !important;
  }

